# renderer_prototype

.helix/: languages.toml
assets/blender/: 03_skinned_cylinder.blend  03_skinned_cylinder.gltf
demo/: Cargo.toml
demo-web/src/: lib.rs
demo/src/: game_asset_lookup.rs  game_asset_manager.rs  init.rs  lib.rs  main.rs  render_contexts.rs  test_scene.rs
demo/src/assets/gltf/: assets.rs  importer.rs
demo/src/game_renderer/: mod.rs  render_frame_job.rs  static_resources.rs
rafx/: Cargo.toml
rafx-api/src/: command_buffer.rs  device_context.rs  external.rs  lib.rs  queue.rs  reflection.rs  root_signature.rs  timeline_semaphore.rs
rafx-api/src/backends/: empty.rs
rafx-api/src/extra/: swapchain_helper.rs  upload.rs
rafx-api/src/types/: definitions.rs  misc.rs  shader.rs
rafx-assets/src/: schema_codegen.rs
rafx-base/: Cargo.toml
rafx-base/src/: atomic_once_cell_stack.rs  lib.rs  resource_map.rs  resource_ref_map.rs  trust_cell.rs
rafx-base/src/resources/: mod.rs
rafx-framework/src/resources/: cooked_shader.rs  resource_lookup.rs
rafx-framework/src/upload/: image_upload.rs
rafx-nodes/src/jobs/: extract.rs  prepare.rs
rafx-renderer/src/: render_frame_job.rs  renderer.rs
rafx-resources/: Cargo.toml
rafx-resources/src/resources/: pipeline_cache.rs  vertex_data.rs
rafx-shader-processor/: Cargo.toml
rafx-shader-processor/src/: codegen.rs  lib.rs  parse_declarations.rs  reflect.rs
rafx/examples/api_triangle/: api_triangle.rs
rafx/examples/meshshader_triangle/: meshshader_triangle.rs
rafx/src/: lib.rs
renderer-assets/: Cargo.toml
(+49 files in other folders)
